<resources>
    <string name="app_name">SofaScoreAcademy</string>
    <string name="buttonRepka">team</string>
    <string name="buttonPoziv">add</string>
    <string name="naslov">Add new player</string>
    <string name="textName">Name</string>
    <string name="nameHint">npr. Domagoj</string>
    <string name="textSurname">Surname</string>
    <string name="surnameHint">npr. Bradarić</string>
    <string name="textAge">Age</string>
    <string name="ageHint">npr. 21</string>
    <string name="textPosition">Position</string>
    <string name="positionHint">npr. defender</string>
    <string name="textClub">Club</string>
    <string name="clubHint">npr. Lille O.S.C.</string>
    <string name="string_addbutton">Call</string>
    <string name="reprezentativci">Players:</string>
    <string name="kriviUnos">Fill all!</string>
    <string name="ispravanUnos">Player added</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_poziv">Add</string>
    <string name="title_repka">Team</string>
    <string name="textview">TextView</string>
    <string name="golman">goalkepper</string>
    <string name="branic">defender</string>
    <string name="vezni">midfielder</string>
    <string name="napadac">forward</string>
    <string name="radioGroupTitle">Pick position:</string>
    <string name="textApper">Num. of appearance</string>
    <string name="apperHint">npr. 3</string>
    <string name="statusText">Status</string>
    <string name="textImage">Image URL</string>
    <string name="imageHint">https://hns-cff.hr/files/images/_resized/0000033475_660_375_cut.jpg</string>
    <string name="lang_title">Pick a language</string>
    <string name="cro">Croatian</string>
    <string name="eng">English</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_player_detail">ScrollingActivity</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="textClubDetail">Club:</string>
    <string name="player_details">Player details</string>
    <string name="player_details_info">You can go back by clicking back in navigation bar</string>
    <string name="action_settings">settings</string>
    <string name="lang_sel">English selected</string>
    <string name="call_succ">Player added</string>
    <string name="search_cities">Search Cities</string>
    <string name="san_francisco">San Francisco</string>
    <string name="temp">20°</string>
    <string name="date">Mon, March 15</string>
    <string name="time_pre">09:32 AM (GMT-7)</string>
    <string name="light_rain">Light Rain</string>
    <string name="infow_text">WIND</string>
    <string name="icons_pre">6 km/h (NW)</string>
    <string name="back_arrow">back</string>
    <string name="title_search">Search</string>
    <string name="title_my_cities">My Cities</string>
    <string name="inner_title">Today</string>
    <string name="daily_pre">12:00</string>
    <string name="act">act</string>
    <string name="act2">det</string>
    <string name="accuracy">ACCURACY</string>
    <string name="humidity">HUMIDITY</string>
    <string name="min_max">MIN / MAX</string>
    <string name="preassure">PREASSURE</string>
    <string name="visibility">VISIBILITY</string>
    <string name="view_more">VIEW MORE</string>
    <string name="search_cities_hint">Search Cities</string>
    <string name="cord">37°47′N, 122°25′W</string>
    <string name="tpr">23°</string>
    <string name="nf">Not found!</string>
    <string name="coordinates">37°47′N, 122°25′W</string>
    <string name="distance">Distance: </string>
    <string name="no_favourites">No favourite cities!</string>
    <string name="recent">Recent</string>
    <string name="remove_msg">" removed from favourites!"</string>
    <string name="next_seven">Next 7 days</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="class_2021">Class 2021</string>
    <string name="sofascore_android_academy">SofaScore Android Academy</string>
    <string name="about">About</string>
    <string name="info">App name</string>
    <string name="name">Super Cool Weather App</string>
    <string name="apic">API Credit</string>
    <string name="api">metaweather</string>
    <string name="dev">Developer</string>
    <string name="ti">Tvrtko Ivasic</string>
    <string name="desc">Application created on SofaScore Android Academy</string>
    <string name="more_info">More Info</string>
    <string name="clear_fav">CLEAR MY CITY LIST</string>
    <string name="clear_recent">CLEAR RECENT SEARCH LIST</string>
    <string name="metric">Metric</string>
    <string name="imperial">imperial</string>
    <string name="unit_que">Choose a type of unit</string>
    <string name="label">City</string>
    <string name="city">City</string>
    <string name="helper_text_lang">Choose a language</string>
    <string name="helper_text_city">Choose a city</string>
    <string name="item">item</string>
    <string name="language_en">English</string>
    <string name="language_hr">Croatian</string>
    <string name="language">Language</string>
    <string name="cityp">pick a city</string>
    <string name="languagep">pick a language</string>
    <string name="gmt">GMT</string>
    <string name="clearFavTitle">Clear favourite search list?</string>
    <string name="clearFavText">If you clear your favourite search list, your city list will be empty.</string>
    <string name="cancel">Cancel</string>
    <string name="clear">clear</string>
    <string name="clearRecTitle">Clear recent search list?</string>
    <string name="clearRecText">If you clear your recent search list, your recent list will be empty.</string>
</resources>