<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioGroupTitle"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/optionGoalkeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golman" />

        <RadioButton
            android:id="@+id/optionDefender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branic" />

        <RadioButton
            android:id="@+id/optionMidfielder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vezni" />

        <RadioButton
            android:id="@+id/optionForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/napadac" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>