<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_poziv">

    <fragment
        android:id="@+id/navigation_poziv"
        android:name="com.example.sofascoreacademy.project.ui.search.FragmentSearch"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_repka"
        android:name="com.example.sofascoreacademy.project.ui.mycity.FragmentMyCity"
        android:label="@string/title_my_cities"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sofascoreacademy.project.ui.settings.FragmentSettings"
        android:label="@string/title_settings"
        tools:layout="@layout/settings" />

</navigation>