<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blue_rounded"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/about"
        android:textAppearance="@style/Headline2DarkLeft"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        android:text="@string/desc"
        android:textAppearance="@style/BodyDarkLeft"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/more_info"
        android:textColor="@color/tint_secondary"
        android:background="@android:color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>